--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
@@ -8,74 +8,60 @@ bolt-copy-to-clipboard {
   display: inline-block;
 }
 
-.c-bolt-copy-to-clipboard__icon,
-.c-bolt-copy-to-clipboard__copied {
-  opacity: 0;
-  position: absolute;
-  pointer-events: none;
-}
-
-.c-bolt-copy-to-clipboard__icon {
-  color: bolt-color(indigo, light);
-  transform: scale(0) rotate(0deg);
-}
-
-.c-bolt-copy-to-clipboard__default,
-.c-bolt-copy-to-clipboard__copied {
-  .c-bolt-link__icon {
-    color: bolt-color(indigo, light);
-  }
-}
-
-.c-bolt-copy-to-clipboard__copied {
-  pointer-events: none;
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-
-  .c-bolt-link__text {
-    color: bolt-color(teal, dark);
-  }
-}
-
 .c-bolt-copy-to-clipboard {
   display: block;
   position: relative;
   text-align: left;
 
   &.is-copied {
-    .c-bolt-copy-to-clipboard__default {
-      opacity: 0;
-      transition: opacity 0.5s ease;
+    .c-bolt-copy-to-clipboard__trigger {
       pointer-events: none;
-      display: inline-block;
-      position: relative;
-      top: 0;
-      left: 0;
+      opacity: 0;
     }
 
-    .c-bolt-copy-to-clipboard__icon {
-      opacity: 1;
-      transform: scale(1) rotate(360deg);
-      transition: all 0.5s ease 0.75s;
+    .c-bolt-copy-to-clipboard__spinner {
       left: 0;
-      top: 0;
-      bottom: 0;
-      margin: auto;
+      opacity: 1;
+      transform: scale(1) rotate(360deg) translateY(-50%);
+      transition: all 0.5s ease 0.75s;
     }
   }
 
   &.is-copied.is-transitioning {
-    .c-bolt-copy-to-clipboard__icon {
+    .c-bolt-copy-to-clipboard__spinner {
       opacity: 0;
       transition: opacity 1s ease;
     }
 
-    .c-bolt-copy-to-clipboard__copied {
+    .c-bolt-copy-to-clipboard__confirmation {
       opacity: 1;
       transition: opacity 1s ease 0.75s;
     }
   }
+}
+
+.c-bolt-copy-to-clipboard__trigger {
+  display: block;
+  transition: opacity 0.5s ease;
+}
+
+.c-bolt-copy-to-clipboard__spinner,
+.c-bolt-copy-to-clipboard__confirmation {
+  display: block;
+  position: absolute;
+  pointer-events: none;
+  opacity: 0;
+}
+
+.c-bolt-copy-to-clipboard__spinner {
+  top: 50%;
+  color: bolt-color(indigo, light); // [Mai] TODO: this is supposed to be the theme link color, must update once theming is refactored.
+  transform: scale(0) rotate(0deg) translateY(-50%);
+  transform-origin: top center;
+}
+
+.c-bolt-copy-to-clipboard__confirmation {
+  top: 0;
+  left: 0;
+  width: 100%;
 }
