--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -13,27 +13,20 @@ $bolt-navlink-text-transition: $bolt-transition;
 // Navlink Component
 bolt-navlink {
   display: block;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  width: 100%;
 }
 
 .c-bolt-navlink {
-  @include bolt-padding-top(xsmall);
-  @include bolt-padding-bottom(xsmall);
-  @include bolt-padding-left(medium);
-  @include bolt-padding-right(medium);
+  @include bolt-padding(small, squished);
+  @include bolt-font-size(small);
   @include bolt-font-weight(semibold);
-  @include bolt-font-size(medium);
 
-  @include respond-to(medium) {
-    @include bolt-padding(small, squished);
-    @include bolt-font-size(small);
-  }
-
-  display: block;
   position: relative;
   opacity: 0.8;
   transition: opacity $bolt-navlink-text-transition;
-
-  display: block;
   position: relative;
   transition: all .1s ease;
   color: currentColor;
