refactor: clean up, simplify navbar Twig demos and variations

--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar--centered.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar--centered.twig
@@ -6,7 +6,8 @@
       "name": "marketing-gray"
     }
   },
-  "links": [
+  center: true,
+  links: [
     {
       "text": "Real-Time AI",
       "url": "link-1-url"
@@ -24,7 +25,7 @@
       "url": "link-1-url"
     },
     {
-      "text": "Multi-dimensional Power Long Title",
+      "text": "Multi-dimensional Power",
       "url": "link-2-url"
     },
     {
