--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar-short.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar-short.twig
@@ -8,28 +8,20 @@
   },
   "links": [
     {
-      "text": "Real-Time AI",
+      "text": "Features",
       "url": "link-1-url"
     },
     {
-      "text": "End-to-end Automation",
+      "text": "Resources",
       "url": "link-2-url"
     },
     {
-      "text": "Journey-centric Delivery",
+      "text": "Industry Apps",
       "url": "link-3-url"
     },
     {
-      "text": "Low Code",
+      "text": "Customer Success",
       "url": "link-1-url"
-    },
-    {
-      "text": "Multi-dimensional Power Long Title",
-      "url": "link-2-url"
-    },
-    {
-      "text": "Cloud Choice",
-      "url": "link-3-url"
     }
   ]
 } %}
