--- a/packages/components/bolt-priority-nav/priority-nav.scss
+++ b/packages/components/bolt-priority-nav/priority-nav.scss
@@ -37,25 +37,57 @@ bolt-priority-nav {
   position: relative;
 
   &:not(.is-ready) {
-    background-image: -webkit-linear-gradient(left, themify(background), hsla(0, 0%, 100%, 0)),
-    -webkit-linear-gradient(right, themify(background), hsla(0, 0%, 100%, 0)),
-    -webkit-linear-gradient(left, themify(background-dark), rgba(234, 240, 246, 0)),
-    -webkit-linear-gradient(right, themify(background-dark), rgba(234, 240, 246, 0));
-    background-color: themify(background);
+    // @TODO: uncomment once themify updates are merged in
+    // background-image: -webkit-linear-gradient(left, themify(background), hsla(0, 0%, 100%, 0)),
+    // -webkit-linear-gradient(right, themify(background), hsla(0, 0%, 100%, 0)),
+    // -webkit-linear-gradient(left, themify(background-dark), rgba(234, 240, 246, 0)),
+    // -webkit-linear-gradient(right, themify(background-dark), rgba(234, 240, 246, 0));
+    // background-color: themify(background);
 
-    // -ms-overflow-style: -ms-autohiding-scrollbar;
+    // @TODO: remove once themify updates are merged in
+    // .t-bolt-xdark & {
+    //   background-image: -webkit-linear-gradient(left, bolt-color(indigo, dark), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(indigo, dark), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(left, bolt-color(indigo, xdark), rgba(234, 240, 246, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(indigo, xdark), rgba(234, 240, 246, 0));
+    //   background-color: bolt-color(indigo, dark);
+    // }
+
+    // .t-bolt-dark & {
+    //   background-image: -webkit-linear-gradient(left, bolt-color(indigo), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(indigo), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(left, bolt-color(indigo, dark), rgba(234, 240, 246, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(indigo, dark), rgba(234, 240, 246, 0));
+    //   background-color: bolt-color(indigo);
+    // }
+
+    // .t-bolt-light & {
+    //   background-image: -webkit-linear-gradient(left, bolt-color(gray, xlight), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(gray, xlight), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(left, bolt-color(gray, light), rgba(234, 240, 246, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(gray, light), rgba(234, 240, 246, 0));
+    //   background-color: bolt-color(gray, light);
+    // }
+
+    // &,
+    // .t-bolt-xlight & {
+    //   background-image: -webkit-linear-gradient(left, bolt-color(white), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(white), hsla(0, 0%, 100%, 0)),
+    //   -webkit-linear-gradient(left, bolt-color(gray, xlight), rgba(234, 240, 246, 0)),
+    //   -webkit-linear-gradient(right, bolt-color(gray, xlight), rgba(234, 240, 246, 0));
+    //   background-color: bolt-color(gray, xlight);
+    // }
+
     -webkit-overflow-scrolling: touch;
-
     background-attachment: local, local, scroll, scroll;
     background-position: 0 0, 100% 0, 0 0, 100% 0;
     background-repeat: no-repeat;
     background-size: 4em 100%, 4em 100%, 1em 100%, 1em 100%;
-
     overflow-x: auto;
 
-    .c-bolt-priority-nav__item {
-      background-color: transparent;
-    }
+    // .c-bolt-priority-nav__item {
+    //   background-color: transparent;
+    // }
   }
 
   .is-hidden {
@@ -68,7 +100,21 @@ bolt-priority-nav {
   width: 100%;
   height: 100%;
   display: block;
-  color: themify(text);
+  // color: themify(text); // @TODO: uncomment once themify updates are merged in
+
+  // @TODO: remove once themify updates are merged in
+  .t-bolt-dark &,
+  .t-bolt-xdark & {
+    color: bolt-color(white);
+  }
+
+  // @TODO: remove once themify updates are merged in
+  &,
+  .t-bolt-light &,
+  .t-bolt-xlight & {
+    color: bolt-color(black);
+  }
+
   background-color: transparent;
 }
 
@@ -88,10 +134,8 @@ bolt-priority-nav {
 
 .c-bolt-priority-nav__item {
   display: flex;
-  // flex-grow: 1;
   flex-shrink: 0;
   white-space: nowrap;
-  //background-color: themify(background);
 }
 
 
@@ -108,7 +152,20 @@ bolt-priority-nav {
 
 
 .c-bolt-priority-nav__dropdown-list {
-  background-color: themify(primary, 0.9);
+  // background-color: themify(primary, 0.9); // @TODO: uncomment once themify updates are merged in
+
+  // @TODO: remove once themify updates are merged in
+  .t-bolt-dark &,
+  .t-bolt-xdark & {
+    background-color: rgba(bolt-color(indigo), 0.9);
+  } // @TODO: remove once themify updates are merged in
+  &,
+  .t-bolt-light &,
+  .t-bolt-xlight & {
+    background-color: rgba(bolt-color(white), 0.9);
+  }
+
+
   list-style: none;
   margin: 0;
   width: 100%;
@@ -125,9 +182,6 @@ bolt-priority-nav {
 }
 
 .c-bolt-priority-nav__dropdown {
-  // @include bolt-padding(small, squished);
-
-
   box-shadow: 0 1px 2px 1px rgba(6, 10, 36, 0.1);
   min-width: 10em;
 
@@ -139,9 +193,16 @@ bolt-priority-nav {
   width: calc(100vw - #{bolt-spacing(large)});
   max-width: 100vw;
   transform: translate3d(0, 0, 0);
-  background-color: themify(secondary);
 
-  // background-color: blue;
+  // background-color: themify(secondary); // @TODO: uncomment once themify updates are merged in
+  // @TODO: remove once themify updates are merged in
+  .t-bolt-dark &,
+  .t-bolt-xdark &,
+  .t-bolt-light &,
+  .t-bolt-light & {
+    background-color: bolt-color(white);
+  }
+
   border-bottom-left-radius: $bolt-border-radius;
   border-bottom-right-radius: $bolt-border-radius;
 
@@ -171,13 +232,6 @@ bolt-priority-nav {
   .c-bolt-priority-nav--show-dropdown & {
     display: block;
   }
-
-  // .c-bolt-priority-nav__item {
-  //   background-color: themify(background, 0.93);
-  // }
-
-  // .c-bolt-priority-nav__link,
-
 }
 
 
@@ -199,18 +253,34 @@ bolt-priority-nav {
   @include bolt-padding(small, squished);
   border: 0;
   border-radius: $bolt-border-radius;
-  // padding: 0.6em;
   white-space: nowrap;
-  // padding: 1em 0.6em;
-  // box-shadow: inset 0 -0.2em 0 themify(background)-dark;
   transition: background-color 0.3s ease;
-  background-color: themify(secondary, 0.05);
+
+  // background-color: themify(secondary, 0.05); // @TODO: uncomment once themify updates are merged in
+  // @TODO: remove once themify updates are merged in
+  &,
+  .t-bolt-dark &,
+  .t-bolt-xdark &,
+  .t-bolt-light &,
+  .t-bolt-light & {
+    background-color: rgba(bolt-color(white), 0.05);
+  }
+
   cursor: pointer;
   position: relative;
 
   @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
     border-radius: 0;
-    border-left: 1px solid themify(secondary, 0.1);
+
+    // border-left: 1px solid themify(secondary, 0.1); // @TODO: uncomment once themify updates are merged in
+    // @TODO: remove once themify updates are merged in
+    &,
+    .t-bolt-dark &,
+    .t-bolt-xdark &,
+    .t-bolt-light &,
+    .t-bolt-light & {
+      border-left: rgba(bolt-color(white), 0.1);
+    }
   }
 
   &:before {
@@ -223,16 +293,36 @@ bolt-priority-nav {
     pointer-events: none;
     opacity: 0;
     pointer-events: none;
-    background-color: themify(primary, 0.9);
-    // border-bottom-left-radius: $bolt-border-radius;
-    // border-bottom-right-radius: $bolt-border-radius;
+
+    // background-color: themify(primary, 0.9); // @TODO: uncomment once themify updates are merged in
+    // @TODO: remove once themify updates are merged in
+    .t-bolt-dark &,
+    .t-bolt-xdark & {
+      background-color: rgba(bolt-color(indigo), 0.9);
+    }
+
+    &,
+    .t-bolt-light &,
+    .t-bolt-xlight & {
+      background-color: rgba(bolt-color(gray), 0.9);
+    }
+
     overflow: hidden;
     z-index: 1;
   }
 
 
   &:hover {
-    background-color: themify(secondary, 0.15);
+    // background-color: themify(secondary, 0.15); // @TODO: uncomment once themify updates are merged in
+
+    // @TODO: remove once themify updates are merged in
+    &,
+    .t-bolt-dark &,
+    .t-bolt-xdark &,
+    .t-bolt-light &,
+    .t-bolt-light & {
+      background-color: rgba(bolt-color(white), 0.15);
+    }
 
     &:before {
       opacity: 0.1;
@@ -241,7 +331,15 @@ bolt-priority-nav {
 
   &.is-active,
   &:active {
-    background-color: themify(secondary, 0.1);
+    // background-color: themify(secondary, 0.1); // @TODO: uncomment once themify updates are merged in
+    // @TODO: remove once themify updates are merged in
+    &,
+    .t-bolt-dark &,
+    .t-bolt-xdark &,
+    .t-bolt-light &,
+    .t-bolt-light & {
+      background-color: rgba(bolt-color(white), 0.1);
+    }
 
     &:before {
       opacity: 0.1;
