--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -19,6 +19,11 @@ bolt-navbar {
   max-width: bolt-breakpoint(xxlarge);
   margin: 0 auto;
 
+  @include respond-to(medium) {
+    @include bolt-padding-left(large);
+    @include bolt-padding-right(large);
+  }
+
   display: flex;
   align-items: center;
   justify-content: space-between;
