Text Component - minor scss adjustments to default font size and JS cleanup

--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -7,6 +7,7 @@
 // Attribute selectors for parent bolt-text
 bolt-text {
   @include bolt-margin-bottom(medium); // Default vspacing
+  @include bolt-font-size(medium); // Default font-size
   display: block;
 
   &[display="inline"] {
