--- a/packages/components/bolt-text/src/text.scss
+++ b/packages/components/bolt-text/src/text.scss
@@ -67,7 +67,11 @@ $bolt-headline--plus-letter-spacing: 0.05rem;
     color: var(--bolt-theme-link-default,var(--bolt-theme-link,#545da6));
     text-decoration: none;
   }
-  a:hover {
+  a:active {
+    color: inherit;
+    color: var(--bolt-theme-link-active,var(--bolt-theme-link,#545da6));
+  }
+  a:hover, a:focus {
     color: inherit;
     color: var(--bolt-theme-link-hover,var(--bolt-theme-link,#545da6));
     text-decoration: underline;
