--- a/packages/components/bolt-chip/src/chip.twig
+++ b/packages/components/bolt-chip/src/chip.twig
@@ -1,5 +1,5 @@
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-chip/chip.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-chip'].schema, _self) | raw }}
 {% endif %}
 
 {% set tags = ["span", "a"] %} {# Available Chip Tags #}
