--- a/packages/components/bolt-teaser/src/teaser.twig
+++ b/packages/components/bolt-teaser/src/teaser.twig
@@ -1,5 +1,5 @@
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-teaser/teaser.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-teaser'].schema, _self) | raw }}
 {% endif %}
 
 <bolt-teaser>
