--- a/packages/components/bolt-navbar/src/navbar.scss
+++ b/packages/components/bolt-navbar/src/navbar.scss
@@ -19,16 +19,20 @@ bolt-navbar {
   @include bolt-padding-right(medium);
   max-width: bolt-breakpoint(xxlarge);
   margin: 0 auto;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
 
   @include respond-to(medium) {
     @include bolt-padding-left(large);
     @include bolt-padding-right(large);
   }
 
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: relative;
+  > * {
+    @include bolt-padding-top(xsmall);
+    @include bolt-padding-bottom(xsmall);
+  }
 
   @supports (display: contents) {
     @media screen and (max-width: #{bolt-breakpoint(xsmall)}) {
@@ -53,8 +57,6 @@ bolt-navbar {
 
 // Nav title
 .c-bolt-navbar__title {
-  @include bolt-padding-top(small);
-  @include bolt-padding-bottom(small);
   @include bolt-margin(0 medium 0 0);
   flex-shrink: 0;
 
