fix: fix sticky example demo in PL so every section on the page matches a link in the navigation

--- a/apps/pattern-lab/src/_patterns/02-components/sticky/-15-sticky-with-content-example.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/sticky/-15-sticky-with-content-example.twig
@@ -14,7 +14,11 @@
       "links":
       [
         {
-          "text": "Section 1ne",
+          "text": "Visualization & Simulation",
+          "url": "#visualization-and-simulation"
+        },
+        {
+          "text": "Section 1",
           "url": "#section-1"
         },
         {
@@ -22,7 +26,7 @@
           "url": "#section-2"
         },
         {
-          "text": "Section Thr33",
+          "text": "Section 3",
           "url": "#section-3"
         },
         {
@@ -39,7 +43,12 @@
   theme: "dark",
   fullBleed: true,
   tag: "figure",
-  contentTag: "figcaption"
+  contentTag: "figcaption",
+  attributes: {
+    id: [
+      "visualization-and-simulation"
+    ]
+  }
 } %}
   {% block band_background %}
     {% include "@bolt-components-background/background.twig" with {
@@ -227,14 +236,6 @@
         {
           "text": "Link",
           "url": "#section-5"
-        },
-        {
-          "text": "Link",
-          "url": "#section-5"
-        },
-        {
-          "text": "Link",
-          "url": "#section-6"
         },
         {
           "text": "Link",
