feat: update priority nav component to include new / renamed nav-indicator custom element internally by default

--- a/packages/components/bolt-priority-nav/priority-nav.twig
+++ b/packages/components/bolt-priority-nav/priority-nav.twig
@@ -5,14 +5,14 @@
 
 <bolt-priority-nav>
   <nav class="c-bolt-priority-nav">
-    <ul class="c-bolt-priority-nav__list c-bolt-priority-nav__primary">
-      {% for item in links %}
-        <li class="c-bolt-priority-nav__item">
-          {% include "@bolt-components-navlink/navlink.twig" with item only %}
-        </li>
-      {% endfor %}
-      {# <li class="c-bolt-nav__indicator js-bolt-nav-indicator"></li> #}
-
-    </ul>
+    <bolt-nav-indicator>
+      <ul class="c-bolt-priority-nav__list c-bolt-priority-nav__primary">
+        {% for item in links %}
+          <li class="c-bolt-priority-nav__item">
+            {% include "@bolt-components-navlink/navlink.twig" with item only %}
+          </li>
+        {% endfor %}
+      </ul>
+    </bolt-nav-indicator>
   </nav>
 </bolt-priority-nav>
