refactor: Display schema description in schema section of docs
Previously, there was a non-functional section in schema-docs.twig that
intended to (but never would have) printed the title and description.
Now title is printed only in docs.twig and description only in
schema-docs.twig

--- a/apps/pattern-lab/src/_includes/utils/schema-docs.twig
+++ b/apps/pattern-lab/src/_includes/utils/schema-docs.twig
@@ -83,18 +83,9 @@
 
 {% import _self as macros %}
 
-
-{% if title %}
-  {% include "@bolt/headline.twig" with {
-    text: title,
-    size: "xxlarge"
-  } only %}
-{% endif %}
-
-{% if description %}
-  {% include "@bolt/subheadline.twig" with {
-    text: description,
-    size: "xlarge"
+{% if schema.description %}
+  {% include "@bolt/text.twig" with {
+    text: schema.description
   } only %}
 {% endif %}
 
