--- a/packages/components/bolt-logo/src/logo.twig
+++ b/packages/components/bolt-logo/src/logo.twig
@@ -1,5 +1,5 @@
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-logo/logo.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-logo'].schema, _self) | raw }}
 {% endif %}
 
 <bolt-logo {% if invert %} class="c-bolt-logo--invert" {% endif %}>
