--- a/packages/components/bolt-background/src/background.twig
+++ b/packages/components/bolt-background/src/background.twig
@@ -1,5 +1,5 @@
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-background/background.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-background'].schema, _self) | raw }}
 {% endif %}
 
 {% set prefix = "c-bolt-" %}
