--- a/packages/components/bolt-breadcrumb/src/breadcrumb.twig
+++ b/packages/components/bolt-breadcrumb/src/breadcrumb.twig
@@ -1,5 +1,5 @@
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-breadcrumb/breadcrumb.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-breadcrumb'].schema, _self) | raw }}
 {% endif %}
 
 {% set prefix = "c-bolt-" %}
