--- a/packages/components/bolt-video/src/video.twig
+++ b/packages/components/bolt-video/src/video.twig
@@ -1,5 +1,5 @@
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-video/video.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-video'].schema, _self) | raw }}
 {% endif %}
 
 {% set videoUuid = videoUuid | default("js-bolt-video-uuid--" ~ random()) %}
