chore: clean up navlink component, polish up design of interactive states

--- a/packages/components/bolt-navlink/navlink.scss
+++ b/packages/components/bolt-navlink/navlink.scss
@@ -4,7 +4,8 @@
    Navlink
 \* ------------------------------------ */
 
-$bolt-navlink-bg-color: rgba(bolt-color(gray), 0.2);
+$bolt-navlink-bg-color: rgba(bolt-color(gray, xlight), 0.1);
+$bolt-navlink-bg-color-active: rgba(bolt-color(gray, xlight), 0.2);
 $bolt-navlink-bg-border-radius: $bolt-border-radius;
 $bolt-navlink-bg-transition-timing: $bolt-transition-timing*4;
 $bolt-navlink-text-transition: $bolt-transition;
@@ -48,6 +49,12 @@ bolt-navlink {
     border-radius: $bolt-navlink-bg-border-radius;
     background-color: $bolt-navlink-bg-color;
     transform: scale3d(0, 0, 0);
+    transition: all 0.1s ease;
+  }
+
+  &:active:before {
+    background-color: $bolt-navlink-bg-color-active;
+    transform: scale3d(1, 1, 1);
   }
 
   &:hover,
