refactor: hard-code smaller navbar size variation so this only gets used (currently) when the navbar contents are being centered / stacked

--- a/packages/components/bolt-navbar/src/navbar.twig
+++ b/packages/components/bolt-navbar/src/navbar.twig
@@ -7,7 +7,7 @@
   {% if theme %} class="t-bolt-{{ theme }}" {% endif %}
   {% if center %} center {% endif %}
 >
-  <nav class="c-bolt-navbar {% if center %} c-bolt-navbar--center {% endif %}">
+  <nav class="c-bolt-navbar {% if center %} c-bolt-navbar--center c-bolt-navbar--small{% endif %}">
     {% if title %}
       {% include "@bolt-components-navbar/_navbar-title.twig" with title only %}
     {% endif %}
