fix: Fix nav indicator positioning in IE (WWWD-2150)
This addresses a regression introduced with
https://github.com/bolt-design-system/bolt/commit/d25ec362#diff-5c1b2065daa942358746a52cf8077fc2L83

--- a/packages/components/bolt-nav/nav.scss
+++ b/packages/components/bolt-nav/nav.scss
@@ -48,7 +48,7 @@ bolt-nav {
   @include respond-to(small) {
     opacity: 1; // [Mai] This is interrelated with the dropdown component.
     bottom: 0; // [Mai] This is interrelated with the dropdown component.
-    left: auto; // [Mai] This is interrelated with the dropdown component.
+    left: 0; // [Mai] This is interrelated with the dropdown component.
   }
 
   .c-bolt-nav--xsmall & {
