--- a/packages/components/bolt-navlink/navlink.twig
+++ b/packages/components/bolt-navlink/navlink.twig
@@ -1,8 +1,14 @@
 {% set attributes = create_attribute(attributes | default({})) %}
 {% set attributes = attributes.addClass("c-bolt-navlink").setAttribute("href", url) %}
 
-<bolt-navlink>
+
+<bolt-navlink {% if active == true %}active{% endif %}>
   <a {{ attributes }}>
     {{ text }}
   </a>
 </bolt-navlink>
+
+{# @todo: uncomment once navlink schema added #}
+{# {% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-navlink'].schema, _self) | raw }}
+{% endif %} #}
