refactor: update nav-indicator to hook into 'navlink:active' event emitted; clean up old code no longer needed.

--- a/packages/components/bolt-nav-indicator/nav-indicator.scss
+++ b/packages/components/bolt-nav-indicator/nav-indicator.scss
@@ -12,7 +12,8 @@ $bolt-nav-indicator-border-transition-timing: $bolt-transition-timing / 2;
 
 bolt-nav-indicator {
   display: block;
-  display: contents; // If supported, just focus on the content inside.
+  display: contents;
+  position: relative;
 }
 
 .c-bolt-nav-indicator {
