fix: fix Sass import paths post-merge, update @bolt/core style imports to point at @bolt/core/index.scss

--- a/apps/pattern-lab/src/styles/pl.scss
+++ b/apps/pattern-lab/src/styles/pl.scss
@@ -1,5 +1,5 @@
 // PL only styles
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 @import '../_patterns/01-styleguide/05-color-palette/_color-swatch.scss';
 @import '../_patterns/01-styleguide/25-breakpoints/_breakpoints.scss';
 @import '../_patterns/04-pages/80-events/_event-sponsors-with-action-block.scss';
