--- a/packages/components/bolt-blockquote/src/blockquote.scss
+++ b/packages/components/bolt-blockquote/src/blockquote.scss
@@ -41,7 +41,7 @@
 //   </blockquote>
 // </bolt-blockquote>
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Local Variables
 $bolt-blockquote-border-width: 4px;
