--- a/packages/components/bolt-headline/src/_tools.headlines.scss
+++ b/packages/components/bolt-headline/src/_tools.headlines.scss
@@ -1,4 +1,4 @@
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Shared base text styles used across all headline, subheadline, eyebrow and vanilla DIY text components
 @mixin bolt-headline() {
