--- a/packages/global/styles/03-generic/_generic-font-stacks.scss
+++ b/packages/global/styles/03-generic/_generic-font-stacks.scss
@@ -8,8 +8,8 @@ $bolt-font-stacks: (
     style: normal,
     weight: 400,
     src: (
-      woff: '../../fonts/opensans-regular.woff',
-      woff2: '../../fonts/opensans-regular.woff2',
+      woff: '~@bolt/global/fonts/opensans-regular.woff',
+      woff2: '~@bolt/global/fonts/opensans-regular.woff2',
     )
   ),
   openSansItalic: (
@@ -17,8 +17,8 @@ $bolt-font-stacks: (
     style: italic,
     weight: 400,
     src: (
-      woff: '../../fonts/opensans-italic.woff',
-      woff2: '../../fonts/opensans-italic.woff2',
+      woff: '~@bolt/global/fonts/opensans-italic.woff',
+      woff2: '~@bolt/global/fonts/opensans-italic.woff2',
     )
   ),
   openSansSemiBold: (
@@ -26,8 +26,8 @@ $bolt-font-stacks: (
     style: normal,
     weight: 600,
     src: (
-      woff: '../../fonts/opensans-semibold.woff',
-      woff2: '../../fonts/opensans-semibold.woff2',
+      woff: '~@bolt/global/fonts/opensans-semibold.woff',
+      woff2: '~@bolt/global/fonts/opensans-semibold.woff2',
     )
   ),
   openSansBoldItalic: (
@@ -35,8 +35,8 @@ $bolt-font-stacks: (
     style: italic,
     weight: 700,
     src: (
-      woff: '../../fonts/opensans-bolditalic.woff',
-      woff2: '../../fonts/opensans-bolditalic.woff2',
+      woff: '~@bolt/global/fonts/opensans-bolditalic.woff',
+      woff2: '~@bolt/global/fonts/opensans-bolditalic.woff2',
     )
   ),
   openSansExtraBold: (
@@ -44,8 +44,8 @@ $bolt-font-stacks: (
     style: normal,
     weight: 800,
     src: (
-      woff: '../../fonts/opensans-extrabold.woff',
-      woff2: '../../fonts/opensans-extrabold.woff2',
+      woff: '~@bolt/global/fonts/opensans-extrabold.woff',
+      woff2: '~@bolt/global/fonts/opensans-extrabold.woff2',
     )
   ),
   openSansExtraBoldItalic: (
@@ -53,8 +53,8 @@ $bolt-font-stacks: (
     style: italic,
     weight: 800,
     src: (
-      woff: '../../fonts/opensans-extrabolditalic.woff',
-      woff2: '../../fonts/opensans-extrabolditalic.woff2',
+      woff: '~@bolt/global/fonts/opensans-extrabolditalic.woff',
+      woff2: '~@bolt/global/fonts/opensans-extrabolditalic.woff2',
     )
   )
 );
