--- a/packages/global/styles/03-generic/_generic-normalize.scss
+++ b/packages/global/styles/03-generic/_generic-normalize.scss
@@ -2,5 +2,5 @@
    GENERIC - NORMALIZE
 \* ------------------------------------ */
 
-@import "normalize-scss/sass/normalize";
+@import '~normalize-scss/sass/_normalize.scss';
 @include normalize;
