--- a/packages/components/bolt-action-blocks/src/action-blocks.scss
+++ b/packages/components/bolt-action-blocks/src/action-blocks.scss
@@ -20,7 +20,7 @@
 //   </ul>
 // </bolt-action-blocks>
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Local Variables
 $bolt-action-block-text-color: var(--bolt-theme-action-block-text, var(--bolt-theme-heading, var(--bolt-theme-text, inherit)));
