--- a/packages/components/bolt-band/src/band.scss
+++ b/packages/components/bolt-band/src/band.scss
@@ -1,7 +1,7 @@
 /**
   * @define c-bolt-band
   */
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 .c-bolt-band {
   display: block;
