--- a/packages/components/bolt-button-group/src/button-group.scss
+++ b/packages/components/bolt-button-group/src/button-group.scss
@@ -1,4 +1,4 @@
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 bolt-button-group:not(:last-child) {
   @include bolt-margin-bottom(medium);
