--- a/packages/components/bolt-chip/src/chip.scss
+++ b/packages/components/bolt-chip/src/chip.scss
@@ -9,7 +9,7 @@
 //   </span>
 // </bolt-chip>
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Chip Variables
 $bolt-chip-border-radius: 100em;
