--- a/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
+++ b/packages/components/bolt-copy-to-clipboard/src/copy-to-clipboard.scss
@@ -2,7 +2,7 @@
    Copy to Clipboard
 \* ------------------------------------ */
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 bolt-copy-to-clipboard {
   display: inline-block;
