--- a/packages/components/bolt-headline/src/headline.scss
+++ b/packages/components/bolt-headline/src/headline.scss
@@ -1,6 +1,6 @@
 // BOLT HEADLINE COMPONENT
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 @import './tools.headlines';
 
 
