--- a/packages/components/bolt-page-footer/page-footer.scss
+++ b/packages/components/bolt-page-footer/page-footer.scss
@@ -2,7 +2,7 @@
   #PAGE FOOTER
 \* ------------------------------------ */
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Provides over-arching page footer
 
