--- a/packages/components/bolt-placeholder/placeholder.scss
+++ b/packages/components/bolt-placeholder/placeholder.scss
@@ -1,4 +1,4 @@
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 bolt-placeholder {
   @include bolt-margin-bottom(medium);
