--- a/packages/components/bolt-teaser/src/teaser.scss
+++ b/packages/components/bolt-teaser/src/teaser.scss
@@ -2,7 +2,7 @@
    TEASER COMPONENT
 \* ------------------------------------ */
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 bolt-teaser:not(:last-child){
   @include bolt-margin-bottom(medium);
