--- a/packages/components/bolt-unordered-list/src/unordered-list.scss
+++ b/packages/components/bolt-unordered-list/src/unordered-list.scss
@@ -17,7 +17,7 @@
 //   </ol>
 // </bolt-unordered-list>
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Local Variables
 $bolt-unordered-list-bullet-size: 8px; // Using px here because I need to make a perfect circle without subpixel issues.
