--- a/packages/components/bolt-video/src/_video-meta.scss
+++ b/packages/components/bolt-video/src/_video-meta.scss
@@ -1,4 +1,4 @@
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Same as max-width of wrapper container
 $bolt-video-meta--max-width: bolt-breakpoint(xxlarge);
