--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -1,4 +1,4 @@
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 @import '~@bolt/components-button/src/button.settings';
 @import '~@bolt/components-button/src/button.mixins';
 
