--- a/packages/global/styles/07-utilities/_utilities-display.scss
+++ b/packages/global/styles/07-utilities/_utilities-display.scss
@@ -2,7 +2,7 @@
   #FLEX UTILITIES
 \* ------------------------------------ */
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 // Add additional spacing size rules for handling auto and zero'd rules
 $bolt-display-props: (
