--- a/packages/global/styles/07-utilities/_utilities-height.scss
+++ b/packages/global/styles/07-utilities/_utilities-height.scss
@@ -2,7 +2,7 @@
   #VISUALLY HIDDEN UTILITIES
 \* ------------------------------------ */
 
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 $bolt-height-props: (
   'xxsmall': bolt-spacing(xxsmall),
