--- a/packages/global/styles/07-utilities/_utilities-visuallyhidden.scss
+++ b/packages/global/styles/07-utilities/_utilities-visuallyhidden.scss
@@ -1,7 +1,7 @@
 /* ------------------------------------ *\
   #VISUALLY HIDDEN UTILITIES
 \* ------------------------------------ */
-@import '~@bolt/core/styles/index.scss';
+@import '~@bolt/core/index.scss';
 
 .u-bolt-visuallyhidden {
   @include bolt-visuallyhidden(important);
