--- a/apps/bolt-site/style.scss
+++ b/apps/bolt-site/style.scss
@@ -1,3 +1,3 @@
-@import '@bolt/core/index.scss';
-@import './templates/site.scss';
-@import './templates/partials/_sub-nav.scss';
+@import '~@bolt/core/index.scss';
+@import '~./templates/site.scss';
+@import '~./templates/partials/_sub-nav.scss';
