--- a/packages/styleguidekit-assets-bolt/src/html/index.twig
+++ b/packages/styleguidekit-assets-bolt/src/html/index.twig
@@ -9,30 +9,27 @@
 </head>
 
 <body class="pl-c-body">
-
-	@@include('./partials/header.html') 
-	
-	@@include('./partials/iframe.html') 
-	
-	@@include('./partials/modal.html')
+  {% include "./partials/header.twig" %}
+  {% include "./partials/iframe.twig" %}
+  {% include "./partials/modal.twig" %}
 
 	<!-- mustache templates -->
 	<script type="text/mustache" class="pl-js-pattern-nav-template">
-		@@include('./partials/pattern-nav.html')
+    {% include "./partials/pattern-nav.twig" %}
 	</script>
 
 	<script type="text/mustache" class="pl-js-ish-controls-template">
-		@@include('./partials/controls.html')
+    {% include "./partials/controls.twig" %}
 	</script>
 
 	<!-- the template for the modal slider -->
 	<script type="text/mustache" class="pl-js-panel-template-base">
-		@@include('./partials/base-template.html')
+    {% include "./partials/base-template.twig" %}
 	</script>
 
 	<!-- the template for code-related tabs in the code view slider -->
 	<script type="text/mustache" id="pl-panel-template-code">
-		@@include('./partials/panel-code-template.html')
+    {% include "./partials/panel-code-template.twig" %}
 	</script>
 
 	<!-- load Pattern Lab data -->
@@ -65,13 +62,13 @@
 	<script src="annotations/annotations.js"></script>
 
 	<!-- load Pattern Lab external library js -->
-	<script src="styleguide/bower_components/jquery.min.js"></script>
+	<!-- <script src="styleguide/bower_components/jquery.min.js"></script>
 	<script src="styleguide/bower_components/hogan-3.0.2.min.js"></script>
 	<script src="styleguide/bower_components/prism.min.js"></script>
 	<script src="styleguide/bower_components/jwerty.min.js"></script>
 	<script src="styleguide/bower_components/typeahead.bundle.min.js"></script>
 	<script src="styleguide/bower_components/EventEmitter.min.js"></script>
-	<script src="styleguide/bower_components/script.min.js"></script>
+	<script src="styleguide/bower_components/script.min.js"></script> -->
 
 	<!-- set-up the dispatcher -->
 	<script>
