chore: normalizing the validate_data_schema check to occur in the same location in every component, misc whitespace issues + uncomment validation rules using "any" with previous fix in place.

--- a/packages/components/bolt-background-shapes/src/background-shapes.twig
+++ b/packages/components/bolt-background-shapes/src/background-shapes.twig
@@ -97,6 +97,7 @@
   </div>
 </bolt-{{ componentName }}>
 
+
 {% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-background-shapes/background-shapes.schema.yml', _self) | raw }}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-background'].schema, _self) | raw }}
 {% endif %}
