--- a/packages/components/bolt-button-group/src/button-group.twig
+++ b/packages/components/bolt-button-group/src/button-group.twig
@@ -1,7 +1,3 @@
-{% if enable_json_schema_validation %}
-  {{ validate_data_schema('@bolt-components-button-group/button-group.schema.yml', _self) | raw }}
-{% endif %}
-
 {% set tags = ["ul", "ol"] %} {# Available Headline Types #}
 {% set prefix = "c-bolt-" %}
 
@@ -38,3 +34,8 @@
   {% endif %}
 {% endblock button_group_content %}
 </bolt-button-group>
+
+
+{% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-button-group'].schema, _self) | raw }}
+{% endif %}
