--- a/packages/components/bolt-navlink/navlink.twig
+++ b/packages/components/bolt-navlink/navlink.twig
@@ -6,3 +6,9 @@
     {{ text }}
   </a>
 </bolt-navlink>
+
+
+{# todo: uncomment when JSON schema added for navlink #}
+{# {% if enable_json_schema_validation %}
+  {{ validate_data_schema(bolt.data.components['@bolt-components-navlink'].schema, _self) | raw }}
+{% endif %} #}
