--- a/apps/pattern-lab/src/_patterns/02-components/video/15-video-hide-meta-title.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/15-video-hide-meta-title.twig
@@ -1,7 +1,7 @@
 {% include "@bolt/video.twig" with {
-  "videoId": "5609376179001",
+  "videoId": "5780495299001",
   "accountId": "1900410236",
   "playerId": "r1CAdLzTW",
   "showMeta": true,
-  "showMetaTitle": true
+  "showMetaTitle": false
 } only %}
