--- a/apps/pattern-lab/src/_patterns/02-components/video/05-video-show-meta-title-and-duration.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/video/05-video-show-meta-title-and-duration.twig
@@ -1,6 +1,7 @@
 {% include "@bolt/video.twig" with {
-  "videoId": "5609376179001",
+  "videoId": "5780495299001",
   "accountId": "1900410236",
   "playerId": "r1CAdLzTW",
-  "showMeta": true
+  "showMeta": true,
+  "showMetaTitle": true
 } only %}
