--- a/packages/components/bolt-video/src/video.scss
+++ b/packages/components/bolt-video/src/video.scss
@@ -13,14 +13,17 @@ $bolt-video-wrapper--max-width: bolt-breakpoint(xxlarge);
   width: 100%;
   background-color: bolt-color(black); // placeholder color before poster loads up.
 
-// Hide the metadata (which covers the controls) if the user is either
-//   a) watching the video
-//   b) potentially interacting with the video
-  &:hover,
-  &.is-playing,
-  &:hover.is-paused {
-    #{$bolt-namespace}-video-meta {
-      transform: translate3d(0, 100%, 0);
+  // [Mai] Hide the duration (which covers the controls) if the user is either
+  //   a) watching the video
+  //   b) potentially interacting with the video
+  &.is-paused {
+    .c-#{$bolt-namespace}-video-meta__item--duration {
+      opacity: 0;
+    }
+  }
+
+  &.is-playing {
+    .c-#{$bolt-namespace}-video-meta__item {
       opacity: 0;
     }
   }
